--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Matthew Stangeland Final Project</title>
 </head>
 <body>
+    <div class = "taskbar">
+        <a href="index.html">Home</a>
+        <a href="myPassions.html">My Passions</a>
+        <a href="future.html">Future</a>
+    </div>
     <h1>Matthew's Senior Portfolio</h1>
     <div class = "cruise">
         <img src = "cruise.JPG" class = "cruise">
@@ -44,5 +49,7 @@
             Take a look at some of my passions <a href = "myPassions.html">here.</a>
         </h3>
     </div>
+    <br><br>
+    <h2><a href = "index.html">BACK TO HOME</a></h2>
 </body>
 </html>
