--- a/future.html
+++ b/future.html
@@ -7,6 +7,12 @@
     <title>Matthew Stangeland Future</title>
 </head>
 <body>
+    <div class = "taskbar">
+        <a href="index.html">Home</a>
+        <a href="myPassions.html">My Passions</a>
+        <a href="future.html">Future</a>
+    </div>
+    
     <h1>Achievements and Plans for the Future</h1>
     <div class = "cruise">
         <img src = "nhs1.JPG">
