--- a/myPassions.html
+++ b/myPassions.html
@@ -6,6 +6,11 @@
     <title>Matthew Passions</title>
 </head>
 <body>
+    <div class = "taskbar">
+        <a href="index.html">Home</a>
+        <a href= "myPassions.html">My Passions</a>
+        <a href="future.html">Future</a>
+    </div>
     <h1>Matthew's Passions</h1>
     <div class = "cruise">
         <img src = "IMG_1860.JPG">
